Changelog
=========

What follows is a history of changes from release to release.  More detail
about the issues mentioned here can be found at the issue tracker, at::

    https://oodt.jpl.nasa.gov/jira/browse/CA


1.2.15 — TBD
------------

• Added Secretome, then removed Secretome.


1.2.14 — Bug Fixes
------------------

• CA-1292
• CA-1300
• CA-1302
• CA-1303


1.2.13 — More Publishing!
-------------------------

• CA-759: Improve publication layout.


1.2.12 — You're Nothing Unless You Publish
------------------------------------------

• CA-179: upgrade eke.publications and hide its right-side portlets.


1.2.11 — I Had Some Chicken; Pass Me the FLOSS
----------------------------------------------

• First official release as free/libre/open source software.


1.2.10 — La Sigh
----------------

• CA-1237 - Stripped-down portal has ingest enabled; should be disabled


1.2.9 — Le Sigh
---------------

• CA-1236 - Stripped-down portal's Super User LDAP group has no Management
  permissions


1.2.8 — Direct Me To Your Leader
--------------------------------

• CA-1231 - Stripped down EDRN Portal doesn't have LDAP


1.2.7 — Quickie
---------------

• Upgrade eke.biomarker during edrnsite.policy upgrade
• CA-1219 - Portal installer should provide option to cull content for speedy
  scanning
• CA-1230 - Quick Links Portlets needs buttons for Informatics and Network
  Consulting Team


1.2.6 — Upgrades
----------------

• Remove dependency on edrnsite.search
• Make compatible with Plone 4.3


1.2.5 — You're So Vain
----------------------

• Rebuild the catalog after ingest so that sites and protocols appear when
  using the new RDF server.
• Add edrnsite.vanity


1.2.4 — Groups In SPAAAAACE!
----------------------------

• Support CA-1001: delete old committees on upgrade so that
  Group-Space–based can replace them.


1.2.3 — NCI Deployment
----------------------

This release updates the upgrade process of the EDRN site policy so that the